--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "koa-router": "^7.2.1",
     "mysql": "^2.14.1",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.1.0-alpha.49"
+    "typeorm": "^0.1.0"
   },
   "scripts": {
     "start": "tsc && node src/index.js"
